--- a/wineapp/package.json
+++ b/wineapp/package.json
@@ -43,7 +43,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-notifications": "~0.29.14"
+    "expo-notifications": "~0.29.14",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
